CHANGES
=======

* set_client_timeout
* first version of customized rpyc_server.py
* fix broken ftp
* move up to version 0.2.0
* A better name for the host params
* move pypi option to default conftest and rename pip-index
* refactor topology structure - add room for lab level attributes
* local modues namespace - done
* local modues namespace - WIP
* refactor rmfiles
* CentOS service WIP -> move to Idan
* move rmtree to target
* test on remote centos with devpi, no service yet
* differentiate between name and hostname
* add operations to HomeBox - get, isfile, rmfile
* improved install - fully implemnted on ubuntu
* refactor os and platform properties
* add readme notes on mac and fedora
* fix documentation
* remove examples
* move os() to target
* fix bug in run with timeout
* add timeout to run()
* add timeout for is\_process\_running
* installation documentation
* add is\_service\_running()
* refine get/set file
* fix get\_package\_version()
* fix is\_process\_running()
* remove host install - should be installed manually
* adding package classifiers
* post merge requirments refres
* adding devpi client
* fix all comments in pull request #1
* ftp tests - WIP
* run host tests on multiple hosts from topo file
* add base class for unittest
* pytest IV
* pure pytest III
* pure pytest II
* first draft of pure pytest with fixtures
* WIP with Linn
* fix pytest lab\_factory
* cybereason cleanup
* Linux install test - WIP.
* fix all comments in pull request #1
* ftp tests - WIP
* cybereason cleanup
* A missing "f"
* no virtualenv on remote
* Linux install test - WIP.
* How to build requirments.txt
* ROOT\_PATH & root\_path now make sense
* WIP: A better setup.py
* run host tests on multiple hosts from topo file
* add base class for unittest
* pytest IV
* pure pytest III
* cybereason cleanup
* A missing "f"
* no virtualenv on remote
* run interface change to mimic subprocess.run
* move run error check from target to hosts
* pure pytest II