@@ -4,5 +4,6 @@ Benny Daon <bennydaon@gmail.com>
 Ronen.Zaslaver <ronen.zaslaver@cybereason.com>
 Yoram Shamir <yoram@ignissoft.com>
 benny daon <bennydaon@gmail.com>
+idan-haim <30602789+idan-haim@users.noreply.github.com>
 ronenzaslaver <ronen.zaslaver@cybereason.com>
 yoram-shamir <46103402+yoram-shamir@users.noreply.github.com>
