@@ -1,10 +1,12 @@
 CHANGES
 =======
 
-* set_client_timeout
-* first version of customized rpyc_server.py
+* rpyc\_server entry point
+* set\_client\_timeout
+* first version of customized rpyc\_server.py
 * fix broken ftp
 * move up to version 0.2.0
+* Improved installation instructions
 * A better name for the host params
 * move pypi option to default conftest and rename pip-index
 * refactor topology structure - add room for lab level attributes
